nicer example json format

--- a/random_tests/bluesky.ipynb
+++ b/random_tests/bluesky.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "[357 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "0  2024-02-07T20:08:11.868Z  2025-01-08T17:59:24.403Z"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,20 +430,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved example for app.bsky.feed.like to app_bsky_feed_like.json\n",
-      "Saved example for app.bsky.graph.follow to app_bsky_graph_follow.json\n",
-      "Saved example for app.bsky.feed.repost to app_bsky_feed_repost.json\n",
-      "Saved example for app.bsky.feed.post to app_bsky_feed_post.json\n",
-      "Saved example for app.bsky.graph.block to app_bsky_graph_block.json\n",
-      "Saved example for app.bsky.graph.listitem to app_bsky_graph_listitem.json\n",
-      "Saved example for app.bsky.actor.profile to app_bsky_actor_profile.json\n"
+      "Saved example for app.bsky.feed.like to examples/app_bsky_feed_like.json\n",
+      "Saved example for app.bsky.graph.follow to examples/app_bsky_graph_follow.json\n",
+      "Saved example for app.bsky.feed.repost to examples/app_bsky_feed_repost.json\n",
+      "Saved example for app.bsky.feed.post to examples/app_bsky_feed_post.json\n",
+      "Saved example for app.bsky.graph.block to examples/app_bsky_graph_block.json\n",
+      "Saved example for app.bsky.graph.listitem to examples/app_bsky_graph_listitem.json\n",
+      "Saved example for app.bsky.actor.profile to examples/app_bsky_actor_profile.json\n"
      ]
     }
    ],
@@ -451,7 +451,7 @@
     "# Query one random example from each collection\n",
     "for collection_name in collections_df['collection'].head(7):\n",
     "    query = f\"\"\"\n",
-    "    SELECT record\n",
+    "    SELECT record, repo\n",
     "    FROM records \n",
     "    WHERE collection = '{collection_name}'\n",
     "    ORDER BY RANDOM()\n",
@@ -463,10 +463,15 @@
     "    if not result.empty:\n",
     "        # Extract the record and save to JSON file\n",
     "        record = result['record'][0]\n",
-    "        filename = f\"{collection_name.replace('.', '_')}.json\"\n",
+    "        repo = result['repo'][0]\n",
+    "        filename = f\"examples/{collection_name.replace('.', '_')}.json\"\n",
+    "        \n",
+    "        # Parse and write JSON with proper indentation\n",
+    "        import json\n",
+    "        json_data = json.loads(record)\n",
     "        \n",
     "        with open(filename, 'w') as f:\n",
-    "            f.write(record)\n",
+    "            json.dump(json_data, f, indent=2)\n",
     "        \n",
     "        print(f\"Saved example for {collection_name} to {filename}\")"
    ]
