--- a/random_tests/bluesky.ipynb
+++ b/random_tests/bluesky.ipynb
@@ -475,11 +475,68 @@
     "        \n",
     "        print(f\"Saved example for {collection_name} to {filename}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CatalogException",
+     "evalue": "Catalog Error: Scalar Function with name json_extract_scalar does not exist!\nDid you mean \"json_extract\"?\nLINE 7:       AND json_extract_scalar(record, '$.text') IS NOT NULL\n    ORDER BY created_at\n...\n                  ^",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCatalogException\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m unique_posts_df \u001b[38;5;241m=\u001b[39m \u001b[43mcon\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124;43m    SELECT DISTINCT \u001b[39;49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;43m        json_extract_scalar(record, \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m$.text\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m) AS text,\u001b[39;49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;43m        created_at\u001b[39;49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124;43m    FROM records\u001b[39;49m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124;43m    WHERE collection = \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapp.bsky.feed.post\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;43m      AND json_extract_scalar(record, \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m$.text\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m) IS NOT NULL\u001b[39;49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;43m    ORDER BY created_at\u001b[39;49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mfetchdf()\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTotal unique posts: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00munique_posts_df\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m display(unique_posts_df)\n",
+      "\u001b[0;31mCatalogException\u001b[0m: Catalog Error: Scalar Function with name json_extract_scalar does not exist!\nDid you mean \"json_extract\"?\nLINE 7:       AND json_extract_scalar(record, '$.text') IS NOT NULL\n    ORDER BY created_at\n...\n                  ^"
+     ]
+    }
+   ],
+   "source": [
+    "unique_posts_df = con.execute(\"\"\"\n",
+    "    SELECT DISTINCT \n",
+    "        json_extract_scalar(record, '$.text') AS text,\n",
+    "        created_at\n",
+    "    FROM records\n",
+    "    WHERE collection = 'app.bsky.feed.post'\n",
+    "      AND json_extract_scalar(record, '$.text') IS NOT NULL\n",
+    "    ORDER BY created_at\n",
+    "\"\"\").fetchdf()\n",
+    "\n",
+    "print(f\"\\nTotal unique posts: {unique_posts_df.shape[0]}\")\n",
+    "display(unique_posts_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  column_name column_type null   key default extra\n",
+      "0        repo     VARCHAR  YES  None    None  None\n",
+      "1  collection     VARCHAR  YES  None    None  None\n",
+      "2        rkey     VARCHAR  YES  None    None  None\n",
+      "3      at_rev     VARCHAR  YES  None    None  None\n",
+      "4  created_at   TIMESTAMP  YES  None    None  None\n",
+      "5     deleted     BOOLEAN  YES  None    None  None\n",
+      "6      record        JSON  YES  None    None  None\n"
+     ]
+    }
+   ],
+   "source": [
+    "schema_df = con.execute(\"DESCRIBE records\").fetchdf()\n",
+    "print(schema_df)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "graph",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
