extracting info from record json

--- a/random_tests/bluesky.ipynb
+++ b/random_tests/bluesky.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +127,7 @@
    "source": [
     "import duckdb\n",
     "import pandas as pd\n",
+    "import json\n",
     "\n",
     "con = duckdb.connect('bluesky_180MB.duckdb')\n",
     "\n",
@@ -149,222 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>repo</th>\n",
-       "      <th>collection</th>\n",
-       "      <th>rkey</th>\n",
-       "      <th>at_rev</th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>deleted</th>\n",
-       "      <th>record</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>did:plc:24nm3tw7chtmhvcyjpkeeda5</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3ldu6z22rk22t</td>\n",
-       "      <td>2024-12-22 03:16:26.835</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>did:plc:24nm3tw7chtmhvcyjpkeeda5</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3le6fncdjso23</td>\n",
-       "      <td>2024-12-26 02:14:05.031</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>did:plc:24nm3tw7chtmhvcyjpkeeda5</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3le6ya7virx2t</td>\n",
-       "      <td>2024-12-26 16:12:55.854</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>did:plc:24nm3tw7chtmhvcyjpkeeda5</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3lemiylyvoy24</td>\n",
-       "      <td>2024-12-31 16:51:22.312</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>did:plc:2bf6txy4s3oruf7hjdxot4bu</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3lehjxzdi4u2j</td>\n",
-       "      <td>2024-12-30 11:12:07.133</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>352</th>\n",
-       "      <td>did:plc:zkpopwaikky2b376gx6j4svn</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3ldqsvoa4vo2h</td>\n",
-       "      <td>2024-12-20 16:40:26.866</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>353</th>\n",
-       "      <td>did:plc:zkpopwaikky2b376gx6j4svn</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3ldtoz7efkb2m</td>\n",
-       "      <td>2024-12-21 20:02:31.097</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>354</th>\n",
-       "      <td>did:plc:zkpopwaikky2b376gx6j4svn</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3ldtozmj6sn2q</td>\n",
-       "      <td>2024-12-21 20:02:44.880</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>355</th>\n",
-       "      <td>did:plc:zkpopwaikky2b376gx6j4svn</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3ldwxkb2qdp2m</td>\n",
-       "      <td>2024-12-23 08:40:52.486</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>356</th>\n",
-       "      <td>did:plc:zkpopwaikky2b376gx6j4svn</td>\n",
-       "      <td>app.bsky.actor.profile</td>\n",
-       "      <td>self</td>\n",
-       "      <td>3lfaf5yamf72b</td>\n",
-       "      <td>2025-01-08 14:57:21.346</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>357 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 repo              collection  rkey  \\\n",
-       "0    did:plc:24nm3tw7chtmhvcyjpkeeda5  app.bsky.actor.profile  self   \n",
-       "1    did:plc:24nm3tw7chtmhvcyjpkeeda5  app.bsky.actor.profile  self   \n",
-       "2    did:plc:24nm3tw7chtmhvcyjpkeeda5  app.bsky.actor.profile  self   \n",
-       "3    did:plc:24nm3tw7chtmhvcyjpkeeda5  app.bsky.actor.profile  self   \n",
-       "4    did:plc:2bf6txy4s3oruf7hjdxot4bu  app.bsky.actor.profile  self   \n",
-       "..                                ...                     ...   ...   \n",
-       "352  did:plc:zkpopwaikky2b376gx6j4svn  app.bsky.actor.profile  self   \n",
-       "353  did:plc:zkpopwaikky2b376gx6j4svn  app.bsky.actor.profile  self   \n",
-       "354  did:plc:zkpopwaikky2b376gx6j4svn  app.bsky.actor.profile  self   \n",
-       "355  did:plc:zkpopwaikky2b376gx6j4svn  app.bsky.actor.profile  self   \n",
-       "356  did:plc:zkpopwaikky2b376gx6j4svn  app.bsky.actor.profile  self   \n",
-       "\n",
-       "            at_rev              created_at  deleted  \\\n",
-       "0    3ldu6z22rk22t 2024-12-22 03:16:26.835    False   \n",
-       "1    3le6fncdjso23 2024-12-26 02:14:05.031    False   \n",
-       "2    3le6ya7virx2t 2024-12-26 16:12:55.854    False   \n",
-       "3    3lemiylyvoy24 2024-12-31 16:51:22.312    False   \n",
-       "4    3lehjxzdi4u2j 2024-12-30 11:12:07.133    False   \n",
-       "..             ...                     ...      ...   \n",
-       "352  3ldqsvoa4vo2h 2024-12-20 16:40:26.866    False   \n",
-       "353  3ldtoz7efkb2m 2024-12-21 20:02:31.097    False   \n",
-       "354  3ldtozmj6sn2q 2024-12-21 20:02:44.880    False   \n",
-       "355  3ldwxkb2qdp2m 2024-12-23 08:40:52.486    False   \n",
-       "356  3lfaf5yamf72b 2025-01-08 14:57:21.346    False   \n",
-       "\n",
-       "                                                record  \n",
-       "0    {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "1    {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "2    {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "3    {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "4    {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "..                                                 ...  \n",
-       "352  {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "353  {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "354  {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "355  {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "356  {\"$type\":\"app.bsky.actor.profile\",\"avatar\":{\"r...  \n",
-       "\n",
-       "[357 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con.execute(\"\"\"\n",
-    "    SELECT *\n",
-    "    FROM records \n",
-    "    WHERE collection = 'app.bsky.actor.profile'\n",
-    "    AND repo IN (\n",
-    "        SELECT repo \n",
-    "        FROM records\n",
-    "        WHERE collection = 'app.bsky.actor.profile'\n",
-    "        GROUP BY repo\n",
-    "        HAVING COUNT(*) > 1\n",
-    "    )\n",
-    "    ORDER BY repo, created_at\n",
-    "\"\"\").fetchdf()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +193,7 @@
        "0  2024-02-07T20:08:11.868Z  2025-01-08T17:59:24.403Z"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +237,7 @@
     "# Query one random example from each collection\n",
     "for collection_name in collections_df['collection'].head(7):\n",
     "    query = f\"\"\"\n",
-    "    SELECT record, repo\n",
+    "    SELECT repo, rkey, at_rev, record\n",
     "    FROM records \n",
     "    WHERE collection = '{collection_name}'\n",
     "    ORDER BY RANDOM()\n",
@@ -461,19 +247,96 @@
     "    result = con.execute(query).fetchdf()\n",
     "    \n",
     "    if not result.empty:\n",
-    "        # Extract the record and save to JSON file\n",
-    "        record = result['record'][0]\n",
+    "        # Extract all fields\n",
+    "        record = json.loads(result['record'][0])\n",
     "        repo = result['repo'][0]\n",
+    "        rkey = result['rkey'][0]\n",
+    "        at_rev = result['at_rev'][0]\n",
+    "        \n",
     "        filename = f\"examples/{collection_name.replace('.', '_')}.json\"\n",
     "        \n",
-    "        # Parse and write JSON with proper indentation\n",
-    "        import json\n",
-    "        json_data = json.loads(record)\n",
+    "        # Combine all fields into one JSON object\n",
+    "        json_data = {\n",
+    "            'repo': repo,\n",
+    "            'rkey': rkey,\n",
+    "            'at_rev': at_rev,\n",
+    "            'record': record\n",
+    "        }\n",
     "        \n",
     "        with open(filename, 'w') as f:\n",
     "            json.dump(json_data, f, indent=2)\n",
     "        \n",
     "        print(f\"Saved example for {collection_name} to {filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InvalidInputException",
+     "evalue": "Invalid Input Error: Malformed JSON at byte 0 of input: input length is 0.  Input: ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mInvalidInputException\u001b[0m                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 39\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Example of creating user-post interaction matrix\u001b[39;00m\n\u001b[0;32m      2\u001b[0m interaction_query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124mWITH user_interactions AS (\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124m    -- Likes\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;124mLIMIT 10  -- Reduced limit for testing\u001b[39m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m---> 39\u001b[0m interaction_df \u001b[38;5;241m=\u001b[39m con\u001b[38;5;241m.\u001b[39mexecute(interaction_query)\u001b[38;5;241m.\u001b[39mfetchdf()\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, interaction_df\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m     41\u001b[0m display(interaction_df\u001b[38;5;241m.\u001b[39mhead())\n",
+      "\u001b[1;31mInvalidInputException\u001b[0m: Invalid Input Error: Malformed JSON at byte 0 of input: input length is 0.  Input: "
+     ]
+    }
+   ],
+   "source": [
+    "# Example of creating user-post interaction matrix\n",
+    "interaction_query = \"\"\"\n",
+    "WITH user_interactions AS (\n",
+    "    -- Likes\n",
+    "    SELECT \n",
+    "        repo as user_id,\n",
+    "        TRY_CAST(JSON_EXTRACT_STRING(record, '$.subject.uri') AS VARCHAR) as post_uri,\n",
+    "        'like' as interaction_type,\n",
+    "        TRY_CAST(JSON_EXTRACT_STRING(record, '$.createdAt') AS TIMESTAMP) as timestamp\n",
+    "    FROM records\n",
+    "    WHERE collection = 'app.bsky.feed.like'\n",
+    "        AND record IS NOT NULL\n",
+    "        AND TRY_CAST(record AS JSON) IS NOT NULL  -- Skip invalid JSON\n",
+    "    \n",
+    "    UNION ALL\n",
+    "    \n",
+    "    -- Posts\n",
+    "    SELECT \n",
+    "        repo as user_id,\n",
+    "        'at://' || repo || '/app.bsky.feed.post/' || rkey as post_uri,\n",
+    "        'create' as interaction_type,\n",
+    "        TRY_CAST(JSON_EXTRACT_STRING(record, '$.createdAt') AS TIMESTAMP) as timestamp\n",
+    "    FROM records\n",
+    "    WHERE collection = 'app.bsky.feed.post'\n",
+    "        AND record IS NOT NULL\n",
+    "        AND TRY_CAST(record AS JSON) IS NOT NULL  -- Skip invalid JSON\n",
+    ")\n",
+    "SELECT \n",
+    "    user_id,\n",
+    "    post_uri,\n",
+    "    interaction_type,\n",
+    "    timestamp\n",
+    "FROM user_interactions\n",
+    "WHERE post_uri IS NOT NULL\n",
+    "    AND timestamp IS NOT NULL\n",
+    "LIMIT 10  -- Reduced limit for testing\n",
+    "\"\"\"\n",
+    "\n",
+    "interaction_df = con.execute(interaction_query).fetchdf()\n",
+    "print(\"Shape:\", interaction_df.shape)\n",
+    "display(interaction_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT * FROM \""
    ]
   }
  ],
