--- a/lightgcn/lightgcn.ipynb
+++ b/lightgcn/lightgcn.ipynb
@@ -15,7 +15,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b88d9d526d1b47529073d559f0a9c15a",
+       "model_id": "642d4f26f95f4eeabc55074957a023d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0ec7b9c559842dba0b18240b4feff9d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,13 +44,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 3618997 interactions and 15 unique posts before May 2023\n",
-      "Interaction matrix shape: (32836, 3618981)\n",
+      "Loaded 3618997 interactions and 3618975 unique posts before May 2023\n",
+      "Interaction matrix shape: (32836, 1023480)\n",
       "Number of users: 32836\n",
-      "Number of posts: 3618981\n",
-      "Number of interactions: 3618997\n",
+      "Number of posts: 1023480\n",
+      "Number of interactions: 3618040\n",
       "Creating adjacency matrix...\n",
-      "Adjacency matrix shape: torch.Size([3651817, 3651817])\n",
+      "Adjacency matrix shape: torch.Size([1056316, 1056316])\n",
       "Initializing model...\n"
      ]
     },
@@ -44,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Aleck\\DSC180\\Bluesky-GraphRec\\lightgcn\\data_processing.py:82: UserWarning: torch.sparse.SparseTensor(indices, values, shape, *, device=) is deprecated.  Please use torch.sparse_coo_tensor(indices, values, shape, dtype=, device=). (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:643.)\n",
+      "c:\\Users\\Aleck\\DSC180\\Bluesky-GraphRec\\lightgcn\\data_processing.py:79: UserWarning: torch.sparse.SparseTensor(indices, values, shape, *, device=) is deprecated.  Please use torch.sparse_coo_tensor(indices, values, shape, dtype=, device=). (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:643.)\n",
       "  adj = torch.sparse.FloatTensor(\n"
      ]
     },
@@ -53,28 +67,24 @@
      "output_type": "stream",
      "text": [
       "Training model...\n",
-      "Epoch 0: Loss = 0.6862\n",
-      "Epoch 10: Loss = 1.0408\n",
-      "Epoch 20: Loss = 1.2053\n",
-      "Epoch 30: Loss = 0.9113\n",
-      "Epoch 40: Loss = 0.9513\n",
-      "Epoch 50: Loss = 0.6722\n",
-      "Epoch 60: Loss = 1.1442\n",
-      "Epoch 70: Loss = 0.6080\n",
-      "Epoch 80: Loss = 0.8622\n",
-      "Epoch 90: Loss = 0.8989\n",
+      "Epoch 0: Loss = 0.6900\n",
+      "Epoch 10: Loss = 1.8675\n",
+      "Epoch 20: Loss = 1.5296\n",
+      "Epoch 30: Loss = 3.2129\n",
+      "Epoch 40: Loss = 2.5868\n",
+      "Epoch 50: Loss = 2.0884\n",
       "Getting recommendations...\n",
       "Top 10 recommendations for user did:plc:42kmtf65uqs765coei7bimwx:\n",
-      "1. 3jthfslydbi2w\n",
-      "2. 3jpiqcsurkc2g\n",
-      "3. 3jumn5l5bw42m\n",
-      "4. 3jsuomeu5oc2m\n",
-      "5. 3jmsqkdts6i2e\n",
-      "6. 3ju2j42srud2a\n",
-      "7. 3jnxnpuaiu22c\n",
-      "8. 3jqhl2wsh722r\n",
-      "9. 3jui7a36kts2w\n",
-      "10. 3jnb53kf3yu2f\n"
+      "1. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3jukkbpk5ak2m', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jukkbpk5ak2m')\n",
+      "2. ('at://did:plc:dst5a7uf7wtatmp66p5ygzmw/app.bsky.feed.post/3juezhxkcrl2m', 'https://bsky.app/profile/did:plc:dst5a7uf7wtatmp66p5ygzmw/post/3juezhxkcrl2m')\n",
+      "3. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juf52klwc72i', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juf52klwc72i')\n",
+      "4. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3jujgu247h42j', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3jujgu247h42j')\n",
+      "5. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juma3uvbuv22', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juma3uvbuv22')\n",
+      "6. ('at://did:plc:z72i7hdynmk6r22z27h6tvur/app.bsky.feed.post/3juhzmynnd22j', 'https://bsky.app/profile/did:plc:z72i7hdynmk6r22z27h6tvur/post/3juhzmynnd22j')\n",
+      "7. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3jugzy3yvoc2m', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3jugzy3yvoc2m')\n",
+      "8. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3juhirhlz2l24', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3juhirhlz2l24')\n",
+      "9. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juexmwyc3o2h', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juexmwyc3o2h')\n",
+      "10. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3jufbtyb2i22e', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jufbtyb2i22e')\n"
      ]
     }
    ],
@@ -110,8 +120,8 @@
     "    model = LightGCN(\n",
     "        num_users=len(user_mapping),\n",
     "        num_items=len(post_mapping),\n",
-    "        embedding_dim=32,  # Reduced from 64\n",
-    "        num_layers=2      # Reduced from 3\n",
+    "        embedding_dim=24,  # Reduced from 64\n",
+    "        num_layers=1      # Reduced from 3\n",
     "    )\n",
     "    \n",
     "    # Training setup with memory-efficient parameters\n",
@@ -124,7 +134,7 @@
     "        optimizer=optimizer,\n",
     "        train_data=interaction_matrix,\n",
     "        adj_matrix=adj_matrix,\n",
-    "        epochs=100,\n",
+    "        epochs=60,\n",
     "        batch_size=128,  # Smaller batch size\n",
     "        device=device\n",
     "    )\n",
