updated some stuff + added beginnings of datamapplot

--- a/lightgcn/lightgcn.ipynb
+++ b/lightgcn/lightgcn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "642d4f26f95f4eeabc55074957a023d8",
+       "model_id": "9b2f7feb9ae343368658e4c78f3b0e55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0ec7b9c559842dba0b18240b4feff9d",
+       "model_id": "cd17abe919c843b09dc277c09379f666",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,40 +51,21 @@
       "Number of interactions: 3618040\n",
       "Creating adjacency matrix...\n",
       "Adjacency matrix shape: torch.Size([1056316, 1056316])\n",
-      "Initializing model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Aleck\\DSC180\\Bluesky-GraphRec\\lightgcn\\data_processing.py:79: UserWarning: torch.sparse.SparseTensor(indices, values, shape, *, device=) is deprecated.  Please use torch.sparse_coo_tensor(indices, values, shape, dtype=, device=). (Triggered internally at C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:643.)\n",
-      "  adj = torch.sparse.FloatTensor(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Initializing model...\n",
       "Training model...\n",
-      "Epoch 0: Loss = 0.6900\n",
-      "Epoch 10: Loss = 1.8675\n",
-      "Epoch 20: Loss = 1.5296\n",
-      "Epoch 30: Loss = 3.2129\n",
-      "Epoch 40: Loss = 2.5868\n",
-      "Epoch 50: Loss = 2.0884\n",
+      "Epoch 0: Loss = 0.6931\n",
       "Getting recommendations...\n",
       "Top 10 recommendations for user did:plc:42kmtf65uqs765coei7bimwx:\n",
-      "1. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3jukkbpk5ak2m', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jukkbpk5ak2m')\n",
-      "2. ('at://did:plc:dst5a7uf7wtatmp66p5ygzmw/app.bsky.feed.post/3juezhxkcrl2m', 'https://bsky.app/profile/did:plc:dst5a7uf7wtatmp66p5ygzmw/post/3juezhxkcrl2m')\n",
-      "3. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juf52klwc72i', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juf52klwc72i')\n",
-      "4. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3jujgu247h42j', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3jujgu247h42j')\n",
-      "5. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juma3uvbuv22', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juma3uvbuv22')\n",
-      "6. ('at://did:plc:z72i7hdynmk6r22z27h6tvur/app.bsky.feed.post/3juhzmynnd22j', 'https://bsky.app/profile/did:plc:z72i7hdynmk6r22z27h6tvur/post/3juhzmynnd22j')\n",
-      "7. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3jugzy3yvoc2m', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3jugzy3yvoc2m')\n",
-      "8. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3juhirhlz2l24', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3juhirhlz2l24')\n",
-      "9. ('at://did:plc:p7gxyfr5vii5ntpwo7f6dhe2/app.bsky.feed.post/3juexmwyc3o2h', 'https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juexmwyc3o2h')\n",
-      "10. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3jufbtyb2i22e', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jufbtyb2i22e')\n"
+      "1. ('at://did:plc:vjug55kidv6sye7ykr5faxxn/app.bsky.feed.post/3ju552mutgu2b', 'https://bsky.app/profile/did:plc:vjug55kidv6sye7ykr5faxxn/post/3ju552mutgu2b')\n",
+      "2. ('at://did:plc:6fktaamhhxdqb2ypum33kbkj/app.bsky.feed.post/3jp2i5dstlc2r', 'https://bsky.app/profile/did:plc:6fktaamhhxdqb2ypum33kbkj/post/3jp2i5dstlc2r')\n",
+      "3. ('at://did:plc:36tmqxxepo5jlx54peygtx6i/app.bsky.feed.post/3juiyd5jckj2s', 'https://bsky.app/profile/did:plc:36tmqxxepo5jlx54peygtx6i/post/3juiyd5jckj2s')\n",
+      "4. ('at://did:plc:6fktaamhhxdqb2ypum33kbkj/app.bsky.feed.post/3juhx7ctgsk2k', 'https://bsky.app/profile/did:plc:6fktaamhhxdqb2ypum33kbkj/post/3juhx7ctgsk2k')\n",
+      "5. ('at://did:plc:yk4dd2qkboz2yv6tpubpc6co/app.bsky.feed.post/3juf3offbc22d', 'https://bsky.app/profile/did:plc:yk4dd2qkboz2yv6tpubpc6co/post/3juf3offbc22d')\n",
+      "6. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3jud3y3k2rs2r', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jud3y3k2rs2r')\n",
+      "7. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3juhyorjmfs2o', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3juhyorjmfs2o')\n",
+      "8. ('at://did:plc:oky5czdrnfjpqslsw2a5iclo/app.bsky.feed.post/3ju6gsfeyda2j', 'https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3ju6gsfeyda2j')\n",
+      "9. ('at://did:plc:ragtjsm2j2vknwkz3zp4oxrd/app.bsky.feed.post/3jtqhia5mxe2z', 'https://bsky.app/profile/did:plc:ragtjsm2j2vknwkz3zp4oxrd/post/3jtqhia5mxe2z')\n",
+      "10. ('at://did:plc:6fktaamhhxdqb2ypum33kbkj/app.bsky.feed.post/3jui2hf6txp2k', 'https://bsky.app/profile/did:plc:6fktaamhhxdqb2ypum33kbkj/post/3jui2hf6txp2k')\n"
      ]
     }
    ],
@@ -134,7 +115,7 @@
     "        optimizer=optimizer,\n",
     "        train_data=interaction_matrix,\n",
     "        adj_matrix=adj_matrix,\n",
-    "        epochs=60,\n",
+    "        epochs=1,\n",
     "        batch_size=128,  # Smaller batch size\n",
     "        device=device\n",
     "    )\n",
