--- a/random_tests/duckdb.ipynb
+++ b/random_tests/duckdb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "[('records',)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4                  {\"text\":\"'3/11 Disaster in Japan' Section, AJW (Asia & Japan Watch), Asahi Shimbun's English Digital Edition:... http://t.co/7tYxlDfk\",\"$type\":\"app.bsky.feed.post\",\"facets\":[{\"index\":{\"byteEnd\":124,\"byteStart\":104},\"features\":[{\"uri\":\"http://t.co/7tYxlDfk\",\"$type\":\"app.bsky.richtext.facet#link\"}]}],\"createdAt\":\"2013-01-07T19:35:32.000Z\"}  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f97251a2eacd415d9817991e72dc81a9",
+       "model_id": "2ae1bbcbcf51491e9fd1abac1ba410cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,14 +336,6 @@
        " ('0002-12-31 (BC) 14:00:00',\n",
        "  '{\"text\":\"0000-01-01T00:00:00+10:00\",\"$type\":\"app.bsky.feed.post\",\"langs\":[\"en\"],\"createdAt\":\"0000-01-01T00:00:00+10:00\"}'),\n",
        " ('0001-01-01 (BC) 00:00:00',\n",
-       "  '{\"text\":\"\",\"$type\":\"app.bsky.feed.post\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
-       " ('0001-01-01 (BC) 00:00:00',\n",
-       "  '{\"text\":\"first!\",\"$type\":\"app.bsky.feed.post\",\"langs\":[\"en\"],\"createdAt\":\"0000-01-01T00:00:00Z\"}'),\n",
-       " ('0001-01-01 (BC) 00:00:00',\n",
-       "  '{\"$type\":\"app.bsky.graph.follow\",\"subject\":\"did:plc:epnu3w7e72ck3hqeghzjajo3\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
-       " ('0001-01-01 (BC) 00:00:00',\n",
-       "  '{\"text\":\"00:00\",\"$type\":\"app.bsky.feed.post\",\"langs\":[\"en\"],\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
-       " ('0001-01-01 (BC) 00:00:00',\n",
        "  '{\"text\":\"こういうこと？\",\"$type\":\"app.bsky.feed.post\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
        " ('0001-01-01 (BC) 00:00:00',\n",
        "  '{\"text\":\"こういうことかな。\",\"$type\":\"app.bsky.feed.post\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
@@ -353,6 +345,14 @@
        "  '{\"text\":\"!|1K|*|W00|c0F|=00000001|S0107|S0109|F8L5H00|S0101|S0109|B3L1ND77J|S0101|B3Y1XCX78|S0109|B4E5N4S68|#|#|#\",\"$type\":\"app.bsky.feed.post\",\"facets\":[],\"createdAt\":\"0000-01-01T00:00:00Z\"}'),\n",
        " ('0001-01-01 (BC) 00:00:00',\n",
        "  '{\"text\":\"\\\\n!|1K|*|W00|c0F|=00000001|S0107|S0109|F8L5H00|S0101|S0109|B3L1ND77J|S0\\\\n101|B3Y1XCX78|S0109|B4E5N4S68|#|#|#\",\"$type\":\"app.bsky.feed.post\",\"facets\":[],\"createdAt\":\"0000-01-01T00:00:00Z\"}'),\n",
+       " ('0001-01-01 (BC) 00:00:00',\n",
+       "  '{\"text\":\"00:00\",\"$type\":\"app.bsky.feed.post\",\"langs\":[\"en\"],\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
+       " ('0001-01-01 (BC) 00:00:00',\n",
+       "  '{\"text\":\"first!\",\"$type\":\"app.bsky.feed.post\",\"langs\":[\"en\"],\"createdAt\":\"0000-01-01T00:00:00Z\"}'),\n",
+       " ('0001-01-01 (BC) 00:00:00',\n",
+       "  '{\"text\":\"\",\"$type\":\"app.bsky.feed.post\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
+       " ('0001-01-01 (BC) 00:00:00',\n",
+       "  '{\"$type\":\"app.bsky.graph.follow\",\"subject\":\"did:plc:epnu3w7e72ck3hqeghzjajo3\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
        " ('0001-01-01 (BC) 00:00:00',\n",
        "  '{\"$type\":\"app.bsky.graph.follow\",\"subject\":\"did:plc:szdjhngvolkj3c72w5bwewxx\",\"createdAt\":\"0000-01-01T00:00:00.000Z\"}'),\n",
        " ('0001-01-01 (BC) 00:00:00.001',\n",
@@ -371,7 +371,7 @@
        "  '{\"text\":\"Hello Bluesky... glad to be the first here!\",\"$type\":\"app.bsky.feed.post\",\"createdAt\":\"0000-04-12T19:53:36.711Z\"}')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "[74 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "[6434 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -775,13 +775,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29851a88b0254c41a38dcb6928f9aa87",
+       "model_id": "b8448f7ba8c6419ba84a65ecba57908b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,6 +791,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3618997, 2)\n"
+     ]
     },
     {
      "data": {
@@ -813,46 +820,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>post_id</th>\n",
-       "      <th>interaction_type</th>\n",
-       "      <th>timestamp</th>\n",
+       "      <th>interaction_uri</th>\n",
+       "      <th>createdAt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>did:plc:42kmtf65uqs765coei7bimwx</td>\n",
-       "      <td>3ju7xbomxzo2w</td>\n",
-       "      <td>1</td>\n",
+       "      <td>at://did:plc:42kmtf65uqs765coei7bimwx/app.bsky.feed.like/3ju7xbomxzo2w</td>\n",
        "      <td>2023-04-25 20:53:03.947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>did:plc:42kmtf65uqs765coei7bimwx</td>\n",
-       "      <td>3jumsneq2im2p</td>\n",
-       "      <td>1</td>\n",
+       "      <td>at://did:plc:42kmtf65uqs765coei7bimwx/app.bsky.feed.like/3jumsneq2im2p</td>\n",
        "      <td>2023-04-30 23:34:44.283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>did:plc:7bo3bipb4qeg43bm5v5oawlu</td>\n",
-       "      <td>3jstlrmyobk27</td>\n",
-       "      <td>1</td>\n",
+       "      <td>at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jstlrmyobk27</td>\n",
        "      <td>2023-04-08 05:30:05.770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>did:plc:7bo3bipb4qeg43bm5v5oawlu</td>\n",
-       "      <td>3jstltqe3vs2u</td>\n",
-       "      <td>1</td>\n",
+       "      <td>at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jstltqe3vs2u</td>\n",
        "      <td>2023-04-08 05:31:15.136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>did:plc:7bo3bipb4qeg43bm5v5oawlu</td>\n",
-       "      <td>3jsvzzulh3s2k</td>\n",
-       "      <td>1</td>\n",
+       "      <td>at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jsvzzulh3s2k</td>\n",
        "      <td>2023-04-09 04:50:34.121</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -860,51 +855,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                            user_id        post_id  interaction_type  \\\n",
-       "0  did:plc:42kmtf65uqs765coei7bimwx  3ju7xbomxzo2w                 1   \n",
-       "1  did:plc:42kmtf65uqs765coei7bimwx  3jumsneq2im2p                 1   \n",
-       "2  did:plc:7bo3bipb4qeg43bm5v5oawlu  3jstlrmyobk27                 1   \n",
-       "3  did:plc:7bo3bipb4qeg43bm5v5oawlu  3jstltqe3vs2u                 1   \n",
-       "4  did:plc:7bo3bipb4qeg43bm5v5oawlu  3jsvzzulh3s2k                 1   \n",
+       "                                                          interaction_uri  \\\n",
+       "0  at://did:plc:42kmtf65uqs765coei7bimwx/app.bsky.feed.like/3ju7xbomxzo2w   \n",
+       "1  at://did:plc:42kmtf65uqs765coei7bimwx/app.bsky.feed.like/3jumsneq2im2p   \n",
+       "2  at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jstlrmyobk27   \n",
+       "3  at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jstltqe3vs2u   \n",
+       "4  at://did:plc:7bo3bipb4qeg43bm5v5oawlu/app.bsky.feed.like/3jsvzzulh3s2k   \n",
        "\n",
-       "                timestamp  \n",
+       "                createdAt  \n",
        "0 2023-04-25 20:53:03.947  \n",
        "1 2023-04-30 23:34:44.283  \n",
        "2 2023-04-08 05:30:05.770  \n",
        "3 2023-04-08 05:31:15.136  \n",
        "4 2023-04-09 04:50:34.121  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "likes_df = con.execute(\"\"\"\n",
-    "        SELECT \n",
-    "            repo as user_id,\n",
-    "            rkey as post_id,\n",
-    "            1 as interaction_type,\n",
-    "            createdAt as timestamp\n",
-    "        FROM records \n",
-    "        WHERE collection = 'app.bsky.feed.like'\n",
-    "            AND createdAt < '2023-05-01'  -- Filter for before May 2023\n",
-    "    \"\"\").fetchdf()\n",
-    "likes_df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "interaction_type\n",
-       "1    3618997\n",
-       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 10,
@@ -913,14 +876,44 @@
     }
    ],
    "source": [
-    "likes_df['interaction_type'].value_counts()"
+    "likes_df = con.execute(\"\"\"\n",
+    "        SELECT \n",
+    "            'at://' || repo || '/app.bsky.feed.like/' || rkey as interaction_uri,\n",
+    "            createdAt\n",
+    "        FROM records \n",
+    "        WHERE collection = 'app.bsky.feed.like'\n",
+    "            AND createdAt < '2023-05-01'\n",
+    "    \"\"\").fetchdf()\n",
+    "print(likes_df.shape)\n",
+    "likes_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "175e87f4b0e24d0e8c0c541f22c576dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(23345998, 2)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -942,76 +935,73 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>post_id</th>\n",
+       "      <th>subject_uri</th>\n",
+       "      <th>createdAt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3jt4tmvosw22p</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-12-24 15:42:47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3jug3h5ohik22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-12-24 18:15:48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3ju5gglokzk2x</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2013-01-04 05:23:02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3jtjdqgap322i</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2013-01-04 05:34:28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3jufczczgys2u</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2013-01-07 19:35:32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         post_id\n",
-       "0  3jt4tmvosw22p\n",
-       "1  3jug3h5ohik22\n",
-       "2  3ju5gglokzk2x\n",
-       "3  3jtjdqgap322i\n",
-       "4  3jufczczgys2u"
+       "  subject_uri           createdAt\n",
+       "0        None 2012-12-24 15:42:47\n",
+       "1        None 2012-12-24 18:15:48\n",
+       "2        None 2013-01-04 05:23:02\n",
+       "3        None 2013-01-04 05:34:28\n",
+       "4        None 2013-01-07 19:35:32"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "posts_df = con.execute(\"\"\"\n",
-    "    SELECT DISTINCT\n",
-    "        r.rkey as post_id\n",
-    "    FROM records r\n",
-    "    INNER JOIN (\n",
-    "        SELECT DISTINCT post_id \n",
-    "        FROM (\n",
-    "            SELECT rkey as post_id\n",
-    "            FROM records\n",
-    "            WHERE collection = 'app.bsky.feed.like'\n",
-    "                AND createdAt < '2023-05-01'\n",
-    "        )\n",
-    "    ) liked_posts ON r.rkey = liked_posts.post_id\n",
-    "    WHERE r.collection = 'app.bsky.feed.post'\n",
+    "    SELECT json_extract_string(record, '$.subject.uri') as subject_uri, createdAt\n",
+    "    FROM records\n",
+    "    WHERE collection = 'app.bsky.feed.post' AND createdAt < '2023-05-01';\n",
     "\"\"\").fetchdf()\n",
+    "print(posts_df.shape)\n",
     "posts_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1057862e003e4543a549f18e0bcecff6",
+       "model_id": "73377956e1ab49b0a39e4a7dd42f15d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1150,7 +1140,7 @@
        "[23345998 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1249,7 @@
        "[3618997 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,13 +1262,6 @@
     "    AND createdAt < '2023-05-01'   \n",
     "            \"\"\").fetch_df()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
