--- a/pytorch_lightgcn/pytorch_lightgcn.ipynb
+++ b/pytorch_lightgcn/pytorch_lightgcn.ipynb
@@ -45,7 +45,7 @@
     "############################################\n",
     "# Load interactions\n",
     "# likes_df, follows_df, posts_df = load_interactions()\n",
-    "likes_df, _, _ = load_interactions()\n",
+    "likes_df, follows_df, _ = load_interactions()\n",
     "\n",
     "# Create temporal split\n",
     "# change split_ratio to change the split timestamp\n",
@@ -64,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 01: 100%|██████████| 5653/5653 [03:16<00:00, 28.77it/s, batch_loss=0.1265]"
+      "Epoch 01: 100%|██████████| 5653/5653 [03:13<00:00, 29.27it/s, batch_loss=0.0743]"
      ]
     },
     {
@@ -73,10 +73,10 @@
      "text": [
       "\n",
       "Epoch 01 Summary:\n",
-      "  Average Loss: 0.0913\n",
-      "  Min Batch Loss: 0.0273\n",
+      "  Average Loss: 0.0931\n",
+      "  Min Batch Loss: 0.0289\n",
       "  Max Batch Loss: 0.6931\n",
-      "  Loss Std Dev: 0.0442\n",
+      "  Loss Std Dev: 0.0444\n",
       "\n",
       "Number of nodes: 846526. Number of users: 30470. Number of posts: 816056\n",
       "Number of edges: 5788490. Number of likes: 3618997\n"
@@ -107,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 56/56 [00:21<00:00,  2.60it/s]"
+      "100%|██████████| 56/56 [00:23<00:00,  2.38it/s]"
      ]
     },
     {
@@ -119,11 +119,11 @@
       "--------------------------------------------------\n",
       "Recall@K Scores:\n",
       "Recall@   20: 0.0085\n",
-      "Recall@  100: 0.0408\n",
-      "Recall@  500: 0.1437\n",
-      "Recall@ 1000: 0.2405\n",
-      "Recall@ 5000: 0.6479\n",
-      "Recall@10000: 0.8680\n",
+      "Recall@  100: 0.0367\n",
+      "Recall@  500: 0.1337\n",
+      "Recall@ 1000: 0.2231\n",
+      "Recall@ 5000: 0.6343\n",
+      "Recall@10000: 0.8576\n",
       "Recall@20000: 1.0000\n",
       "--------------------------------------------------\n",
       "\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,118 +233,126 @@
       "Recommended posts:\n",
       "--------------------------------------------------\n",
       "\n",
-      "1. By @did:plc:zgeg2yrcoycwnhut27p74ppw\n",
-      "   https://bsky.app/profile/did:plc:zgeg2yrcoycwnhut27p74ppw/post/3jttq3wjmpn2z\n",
-      "   Posted: 2023-04-21 00:12:37.756000\n",
-      "   Text: num tem como seguir no atacado nao? Tipo, abrir as curtidas do meu post e seguir geral num movimento de mouse?...\n",
+      "1. By @did:plc:ragtjsm2j2vknwkz3zp4oxrd\n",
+      "   https://bsky.app/profile/did:plc:ragtjsm2j2vknwkz3zp4oxrd/post/3jtqhia5mxe2z\n",
+      "   Posted: 2023-04-19 17:00:27.839000\n",
+      "   Text: 📢 Android is finally here! 🎉\n",
       "\n",
-      "2. By @did:plc:jroueo4p5k52wd5qm5ig4nlo\n",
-      "   https://bsky.app/profile/did:plc:jroueo4p5k52wd5qm5ig4nlo/post/3jtwebbeb3k2c\n",
-      "   Posted: 2023-04-22 01:18:51.311000\n",
-      "   Text: 600 milhões de seguidores aqui em 1 dia...\n",
+      "Google takes a while to update their search so here’s the direct link:\n",
       "\n",
-      "3. By @did:plc:jroueo4p5k52wd5qm5ig4nlo\n",
-      "   https://bsky.app/profile/did:plc:jroueo4p5k52wd5qm5ig4nlo/post/3jua3642ucn25\n",
-      "   Posted: 2023-04-25 22:02:38.437000\n",
-      "   Text: Finalmente belíssima com meu domínio personalizado. E vamos de follow spree para comemorar!\n",
+      "https://play.google.com/store/apps/details?id=xyz.blueskyweb.app&hl=en_US...\n",
       "\n",
-      "Curta esse post se quiser ser seguido pela BCzinha aqui no Céu Azul! 💙...\n",
-      "\n",
-      "4. By @Unknown\n",
-      "   https://bsky.app/profile/did:plc:jt72xztklu3d2chvll2hizr6/post/3jtwbh5wm6k2c\n",
-      "   Posted: Unknown\n",
-      "   Text: Post not found...\n",
-      "\n",
-      "5. By @did:plc:jroueo4p5k52wd5qm5ig4nlo\n",
-      "   https://bsky.app/profile/did:plc:jroueo4p5k52wd5qm5ig4nlo/post/3jtw35hnufm2e\n",
-      "   Posted: 2023-04-21 22:35:40.095000\n",
-      "   Text: Follow Spree da BCzinha: \n",
-      "\n",
-      "Vou seguir todo mundo que der like aqui....\n",
-      "\n",
-      "6. By @Unknown\n",
+      "2. By @Unknown\n",
       "   https://bsky.app/profile/did:plc:umasif5o4jft7uyas6kfw45m/post/3jtdym5rbfs2s\n",
       "   Posted: Unknown\n",
       "   Text: Post not found...\n",
       "\n",
-      "7. By @did:plc:fsrulnpihqtdky5vjff6ktf6\n",
-      "   https://bsky.app/profile/did:plc:fsrulnpihqtdky5vjff6ktf6/post/3jsznp7qf522j\n",
-      "   Posted: 2023-04-10 15:20:30.596000\n",
-      "   Text: oi gente, sou eu!!!...\n",
+      "3. By @did:plc:zgeg2yrcoycwnhut27p74ppw\n",
+      "   https://bsky.app/profile/did:plc:zgeg2yrcoycwnhut27p74ppw/post/3jtw26j4a6k2e\n",
+      "   Posted: 2023-04-21 22:18:21.490000\n",
+      "   Text: @coisadenerd.bsky.social na área...\n",
       "\n",
-      "8. By @Unknown\n",
-      "   https://bsky.app/profile/did:plc:ioddc2qmd7762amwufgt4evl/post/3juak3eqpxz2f\n",
+      "4. By @did:plc:z72i7hdynmk6r22z27h6tvur\n",
+      "   https://bsky.app/profile/did:plc:z72i7hdynmk6r22z27h6tvur/post/3jt6walwmos2y\n",
+      "   Posted: 2023-04-12 17:36:42.427000\n",
+      "   Text: How it started:...\n",
+      "\n",
+      "5. By @did:plc:dimjrgeatypdz72m4okacmrt\n",
+      "   https://bsky.app/profile/did:plc:dimjrgeatypdz72m4okacmrt/post/3jta7367fec2w\n",
+      "   Posted: 2023-04-13 05:47:23.878000\n",
+      "   Text: the bluesky timeline is called \n",
+      "the skyline...\n",
+      "\n",
+      "6. By @did:plc:ragtjsm2j2vknwkz3zp4oxrd\n",
+      "   https://bsky.app/profile/did:plc:ragtjsm2j2vknwkz3zp4oxrd/post/3jspibkdx722w\n",
+      "   Posted: 2023-04-06 14:16:45.969000\n",
+      "   Text: To all the new users joining us: welcome! We're so happy to have you.\n",
+      "\n",
+      "You're here during a closed beta. We're still fixing lots of bugs and finishing the core tech & features such as custom algorithm...\n",
+      "\n",
+      "7. By @did:plc:dc2t4ajxngmuym3om5njlatc\n",
+      "   https://bsky.app/profile/did:plc:dc2t4ajxngmuym3om5njlatc/post/3jsqiazchr22i\n",
+      "   Posted: 2023-04-06 23:49:07.899000\n",
+      "   Text: Estamos entre 8 e 10k usuários aqui no total\n",
+      "Bom d+ estar acompanhando o nascimento de uma rede ❤️...\n",
+      "\n",
+      "8. By @did:plc:pdac24jyypwultrppa457voe\n",
+      "   https://bsky.app/profile/did:plc:pdac24jyypwultrppa457voe/post/3jtbac3zlzb26\n",
+      "   Posted: 2023-04-13 15:41:49.895000\n",
+      "   Text: 20,000 users and counting! 😳🔥💪\n",
+      "Bluesky is growing fast and making waves. 🌊...\n",
+      "\n",
+      "9. By @did:plc:tgxolrj6wkcputrww7zj5wlb\n",
+      "   https://bsky.app/profile/did:plc:tgxolrj6wkcputrww7zj5wlb/post/3jsujw6lilc2e\n",
+      "   Posted: 2023-04-08 14:29:30.647000\n",
+      "   Text: Beyoncé é a maior artista de todos os tempos. Quem concorda respira....\n",
+      "\n",
+      "10. By @did:plc:z72i7hdynmk6r22z27h6tvur\n",
+      "   https://bsky.app/profile/did:plc:z72i7hdynmk6r22z27h6tvur/post/3jt6wgfuuvs23\n",
+      "   Posted: 2023-04-12 17:39:57.412000\n",
+      "   Text: How it’s going: \n",
+      "\n",
+      "Welcome to the first app built on atproto! \n",
+      "\n",
+      "https://atproto.com/...\n",
+      "\n",
+      "11. By @Unknown\n",
+      "   https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jqffomsixc2w\n",
       "   Posted: Unknown\n",
       "   Text: Post not found...\n",
       "\n",
-      "9. By @did:plc:7ba7lz54yll7pxslxv47ejws\n",
-      "   https://bsky.app/profile/did:plc:7ba7lz54yll7pxslxv47ejws/post/3jtwcgb3uz32n\n",
-      "   Posted: 2023-04-22 00:45:51.223000\n",
-      "   Text: Ser presidente deve ser parecido com ter uma conta no twitter. TUDO o que você fala será interpretado em sua pior possibilidade....\n",
+      "12. By @did:plc:pdac24jyypwultrppa457voe\n",
+      "   https://bsky.app/profile/did:plc:pdac24jyypwultrppa457voe/post/3jstmkhbnzk2i\n",
+      "   Posted: 2023-04-08 05:43:58.301000\n",
+      "   Text: 10,000 users on Bluesky and counting! 🎊\n",
+      "This is just the beginning of something truly special. I can't wait to see how we grow and make a difference in the world together. \n",
+      "Let's keep the positive ene...\n",
       "\n",
-      "10. By @did:plc:jroueo4p5k52wd5qm5ig4nlo\n",
-      "   https://bsky.app/profile/did:plc:jroueo4p5k52wd5qm5ig4nlo/post/3jucne73ukk2r\n",
-      "   Posted: 2023-04-26 22:33:30.025000\n",
-      "   Text: 🚨Em poucos dias, a BCzinha alcançou a marca de 1 BILHÃO de seguidores aqui no Céu Azul. \n",
+      "13. By @did:plc:p7gxyfr5vii5ntpwo7f6dhe2\n",
+      "   https://bsky.app/profile/did:plc:p7gxyfr5vii5ntpwo7f6dhe2/post/3juf52klwc72i\n",
+      "   Posted: 2023-04-27 22:19:46.107000\n",
+      "   Text: Here you go!...\n",
       "\n",
-      "Muito obrigado a todos os BCharters que estão com a gente em todas as plataformas 💙...\n",
+      "14. By @did:plc:cm4bwax4evxmkiuwxvvkvlmx\n",
+      "   https://bsky.app/profile/did:plc:cm4bwax4evxmkiuwxvvkvlmx/post/3jspip7zqqk2t\n",
+      "   Posted: 2023-04-06 14:24:24.887000\n",
+      "   Text: Welcome 👋...\n",
       "\n",
-      "11. By @did:plc:fqiatejd2mv34wztyh2euto7\n",
-      "   https://bsky.app/profile/did:plc:fqiatejd2mv34wztyh2euto7/post/3ju7xhx5oyf25\n",
-      "   Posted: 2023-04-25 20:56:33.989000\n",
-      "   Text: lulu...\n",
+      "15. By @did:plc:pdac24jyypwultrppa457voe\n",
+      "   https://bsky.app/profile/did:plc:pdac24jyypwultrppa457voe/post/3juasdlywee2z\n",
+      "   Posted: 2023-04-26 04:57:18.946000\n",
+      "   Text: 🎉 Woohoo! 4️⃣0️⃣,0️⃣0️⃣0️⃣ users on Bluesky! 🚀 Next stop 50k! Let's keep the community thriving. 🌟💪🏼...\n",
       "\n",
-      "12. By @did:plc:zgeg2yrcoycwnhut27p74ppw\n",
-      "   https://bsky.app/profile/did:plc:zgeg2yrcoycwnhut27p74ppw/post/3jtlsvczlyk2n\n",
-      "   Posted: 2023-04-17 20:41:19.364000\n",
-      "   Text: Cheguei...\n",
+      "16. By @did:plc:gtup3dkpbf76d4v3jkdvdrhh\n",
+      "   https://bsky.app/profile/did:plc:gtup3dkpbf76d4v3jkdvdrhh/post/3jtqkujmo3c2n\n",
+      "   Posted: 2023-04-19 18:00:59.814000\n",
+      "   Text: ATENÇÃO ANDROIDERS! 🚨 Habemus app 🥰...\n",
       "\n",
-      "13. By @did:plc:zgeg2yrcoycwnhut27p74ppw\n",
-      "   https://bsky.app/profile/did:plc:zgeg2yrcoycwnhut27p74ppw/post/3juc2z425722m\n",
-      "   Posted: 2023-04-26 17:05:10.958000\n",
-      "   Text: Eita! Ta chegando uma galera aqui! Bem-vindos 🫂...\n",
+      "17. By @Unknown\n",
+      "   https://bsky.app/profile/did:plc:iijrtk7ocored6zuziwmqq3c/post/3jtenlp2qa32r\n",
+      "   Posted: Unknown\n",
+      "   Text: Post not found...\n",
       "\n",
-      "14. By @did:plc:zgeg2yrcoycwnhut27p74ppw\n",
-      "   https://bsky.app/profile/did:plc:zgeg2yrcoycwnhut27p74ppw/post/3jttp2xhg3n2z\n",
-      "   Posted: 2023-04-20 23:54:11.390000\n",
-      "   Text: De certa maneira, mudar de rede traz de volta o sentimento de imigrar, de quando meu marido e eu vendemos tudo que tínhamos no Brasil e chegamos com uma mala pra viver 30 dias num hotel baratinho, ond...\n",
+      "18. By @did:plc:vjug55kidv6sye7ykr5faxxn\n",
+      "   https://bsky.app/profile/did:plc:vjug55kidv6sye7ykr5faxxn/post/3ju552mutgu2b\n",
+      "   Posted: 2023-04-24 17:58:30.594000\n",
+      "   Text: today is my first day with the @bsky.app team! (new handle 👀)\n",
       "\n",
-      "15. By @did:plc:6fbsjbism6lda6cr75b52tnb\n",
-      "   https://bsky.app/profile/did:plc:6fbsjbism6lda6cr75b52tnb/post/3jty2ogiwkb2n\n",
-      "   Posted: 2023-04-22 17:32:34.047000\n",
-      "   Text: no brasil se institucionalizou o que chamo de a republica do beijo e da carne moida,quando nao estamos beijando,estamos comendo carne moida. e assim desenrola esse verdadeiro CIRCO,onde as cortinas ca...\n",
+      "i’ll be focused on developer relations and community 😊 \n",
       "\n",
-      "16. By @did:plc:tv5wleaccmv6uzscyyz2vikh\n",
-      "   https://bsky.app/profile/did:plc:tv5wleaccmv6uzscyyz2vikh/post/3jtxpwqnwk52u\n",
-      "   Posted: 2023-04-22 14:20:22.290000\n",
-      "   Text: Olá pessoal, essa thread é para explicar o que é e o que será essa nova rede social. Vou falar sobre o AT Protocol, Rede Descentralizada, Rede Federada e dúvidas sobre os @ e domínios no handle.\n",
-      "Segue...\n",
+      "if you build something on atproto or have feedback, tag/email me anytime! emily@...\n",
       "\n",
-      "17. By @did:plc:jympjn2aetzf3zticffzgw3c\n",
-      "   https://bsky.app/profile/did:plc:jympjn2aetzf3zticffzgw3c/post/3ju56ouzjks2v\n",
-      "   Posted: 2023-04-24 18:27:43.560000\n",
-      "   Text: como pode apenas 36 mil users no mundo inteiro e nós estarmos entre eles acho isso tão chique...\n",
+      "19. By @did:plc:oky5czdrnfjpqslsw2a5iclo\n",
+      "   https://bsky.app/profile/did:plc:oky5czdrnfjpqslsw2a5iclo/post/3jto7vjqzwy2r\n",
+      "   Posted: 2023-04-18 19:39:24.719000\n",
+      "   Text: Did you know there’s a status page for bluesky & atproto services? If something doesn’t seem to be working, try checking \n",
       "\n",
-      "18. By @did:plc:o7ljybtdjjydwrwujfdpkbcb\n",
-      "   https://bsky.app/profile/did:plc:o7ljybtdjjydwrwujfdpkbcb/post/3jtvkstyyvr2d\n",
-      "   Posted: 2023-04-21 17:43:24.097000\n",
-      "   Text: Tenho que lembrar de usar mais aqui pra gente povoar essa rede e acabar com a outra...\n",
+      "https://status.bsky.app/...\n",
       "\n",
-      "19. By @did:plc:7ba7lz54yll7pxslxv47ejws\n",
-      "   https://bsky.app/profile/did:plc:7ba7lz54yll7pxslxv47ejws/post/3ju5qcjqkb62w\n",
-      "   Posted: 2023-04-24 23:42:56.669000\n",
-      "   Text: Fiz uma aula na academia outro dia e praticamente tudo era em inglês. Tinha os exercicios na CAGE e no FLOOR. Podia pegar os DUMBBELLS e depois os STEPS. sendo que no final ia ter um CHALLENGE. Mas no...\n",
-      "\n",
-      "20. By @did:plc:d3zpokjdspr22chfrc427eis\n",
-      "   https://bsky.app/profile/did:plc:d3zpokjdspr22chfrc427eis/post/3jt6mxv272j2x\n",
-      "   Posted: 2023-04-12 14:50:46.226000\n",
-      "   Text: dica p quem tá chegando agora: \n",
-      "\n",
-      "- o bluesky não vai fazer milagre se você não seguir pessoas e interagir com elas. \n",
-      "\n",
-      "- seja intrometido, sai respondendo todo mundo \n",
-      "\n",
-      "- saia dando like em todos os pos...\n"
+      "20. By @Unknown\n",
+      "   https://bsky.app/profile/did:plc:36tmqxxepo5jlx54peygtx6i/post/3jtu65gakkh2f\n",
+      "   Posted: Unknown\n",
+      "   Text: Post not found...\n"
      ]
     }
    ],
@@ -383,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -497,6 +505,78 @@
     "    print(f\"{user_idx}: {profile_url}\")\n",
     "    print(f\"    Likes: {user_likes_count}\")\n",
     "    print(f\"    Following: {user_following_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User profile: https://bsky.app/profile/did:plc:e2a2sywvv7dwlu4h4qdt3h7j\n",
+      "Similar users to user index 1014:\n",
+      "--------------------------------------------------\n",
+      "Similarity score: 0.7648\n",
+      "Profile: https://bsky.app/profile/did:plc:sqvt4jbt6tjjarugjlw5ycnn\n",
+      "\n",
+      "Similarity score: 0.7344\n",
+      "Profile: https://bsky.app/profile/did:plc:yp255lkwkcal42wd55ywfum2\n",
+      "\n",
+      "Similarity score: 0.7071\n",
+      "Profile: https://bsky.app/profile/did:plc:lipqor2zk6q6sagskv5pzees\n",
+      "\n",
+      "Similarity score: 0.7069\n",
+      "Profile: https://bsky.app/profile/did:plc:ns7pzrboi4swrz7gpacdcia3\n",
+      "\n",
+      "Similarity score: 0.7027\n",
+      "Profile: https://bsky.app/profile/did:plc:jg6ouvyo7inrrxvllqqelkao\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_similar_users(model, user_idx, train_data, top_k=5):\n",
+    "    # Get all embeddings\n",
+    "    embeddings = model.get_embedding(train_data.edge_index.to(device))\n",
+    "    \n",
+    "    # Get user embeddings only\n",
+    "    user_embeddings = embeddings[:train_data.num_users]\n",
+    "    \n",
+    "    # Calculate cosine similarity between target user and all other users\n",
+    "    target_embedding = user_embeddings[user_idx].unsqueeze(0)\n",
+    "    cos = torch.nn.CosineSimilarity(dim=1)\n",
+    "    similarities = cos(target_embedding, user_embeddings)\n",
+    "    \n",
+    "    # Get top-k similar users (excluding the user themselves)\n",
+    "    similarities[user_idx] = -1  # Exclude self\n",
+    "    top_similar = torch.topk(similarities, k=top_k)\n",
+    "    \n",
+    "    # Convert user indices back to DIDs\n",
+    "    inv_user2id = {v: k for k, v in train_data.user2id.items()}\n",
+    "    similar_users = []\n",
+    "    \n",
+    "    # Add .detach() before .numpy()\n",
+    "    for idx, score in zip(top_similar.indices.cpu().detach().numpy(), \n",
+    "                         top_similar.values.cpu().detach().numpy()):\n",
+    "        user_did = inv_user2id[idx]\n",
+    "        profile_url = f\"https://bsky.app/profile/{user_did}\"\n",
+    "        similar_users.append((profile_url, score))\n",
+    "    \n",
+    "    return similar_users\n",
+    "\n",
+    "# Example usage:\n",
+    "user_idx_example = 1014  # You can change this to any user index\n",
+    "similar_users = find_similar_users(model, user_idx_example, train_data, top_k=5)\n",
+    "\n",
+    "print(f\"User profile: {user_profile_url}\")\n",
+    "print(f\"Similar users to user index {user_idx_example}:\")\n",
+    "print(\"-\" * 50)\n",
+    "for profile_url, similarity_score in similar_users:\n",
+    "    print(f\"Similarity score: {similarity_score:.4f}\")\n",
+    "    print(f\"Profile: {profile_url}\\n\")"
    ]
   }
  ],
